cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_288.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_exp.c:255: error: DEAD_STORE
  The value written to &j (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_exp.c:255:9: Write of unused value
253.            * set bit before the end of the window
254.            */
255.           j = wstart;
               ^
256.           wvalue = 1;
257.           wend = 0;
